--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.10",
+    "expo-localization": "^17.0.8",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.7.2",
     "react": "19.1.0",
+    "react-i18next": "^16.4.1",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
