--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
-    "expo": "~54.0.27",
-    "expo-image-picker": "^17.0.9",
+    "expo": "~54.0.29",
+    "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.10",
     "expo-localization": "^17.0.8",
