--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.10",
     "expo-localization": "^17.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "i18next": "^25.7.2",
     "react": "19.1.0",
